server/TinTin/TinTin/src/main/java/com/example/TinTin/util/error/DuplicateResourceException.java
package com.example.TinTin.util.error;

public class DuplicateResourceException extends RuntimeException {
    public DuplicateResourceException(String message) {
        super(message);
    }
}